--- a/afblock_blog_page/code.html
+++ b/afblock_blog_page/code.html
@@ -78,9 +78,9 @@
                 </div>
                 <div class="hidden md:flex items-center space-x-4">
                     <a class="text-sm font-medium text-primary hover:text-blue-900 dark:text-white dark:hover:text-gray-200"
-                        href="#">Log in</a>
+                        href="https://afblock-business.dartsia.app/login">Log in</a>
                     <a class="px-5 py-2.5 text-sm font-medium text-white bg-primary rounded-lg hover:bg-blue-900 transition-all shadow-sm hover:shadow-md"
-                        href="#">Get Started</a>
+                        href="https://afblock-business.dartsia.app/signup">Get Started</a>
                 </div>
                 <div class="md:hidden flex items-center">
                     <button class="text-gray-500 hover:text-primary dark:text-gray-400 dark:hover:text-white">
