--- a/afblock_terms_page/code.html
+++ b/afblock_terms_page/code.html
@@ -81,9 +81,9 @@
                 </nav>
                 <div class="flex items-center space-x-4">
                     <a class="hidden lg:inline-block text-sm font-medium text-primary dark:text-blue-300 hover:text-blue-800 dark:hover:text-white"
-                        href="#">Log in</a>
+                        href="https://afblock-business.dartsia.app/login">Log in</a>
                     <a class="bg-primary hover:bg-blue-900 text-white px-5 py-2.5 rounded-lg text-sm font-semibold transition-all shadow-glow hover:shadow-lg transform hover:-translate-y-0.5"
-                        href="#">
+                        href="https://afblock-business.dartsia.app/signup">
                         Get started
                     </a>
                 </div>
